fixed scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,6 @@ html {
 * {
     box-sizing:border-box;  
 }
-
+::-webkit-scrollbar {
+    width: 8px;
+}
